# BrindleWM

./: CMakeLists.txt  LICENSE  README.md
src/: brindlewm.c  events.c  events.h  logger.c  logger.h
